# TP-POO

./: CMakeLists.txt  IMesh.h  ISolver.h  README.md  TD3_equation_and_numerical_scheme-2.md  Timer.cpp  Timer.hpp  UniformMesh.cpp  UniformMesh.h  concepts.h  equation.cpp  equation.h  main.cpp  plot_solutions.gp  problem.cpp  problem.h  test_unit.cpp  variable.cpp  variable.h
TD /: TD2-5_intro.md  TD2_simulator_architecture-2.md  TD4_validation.md  TD5_performance.md
solvers/: GaussSeidel.h  Jacobi.h
